# script-engine-test

./: .gitignore  CMakeLists.txt  CMakeSettings.json
assets/: function.lua  pt2-1.lua  pt2.lua  test1.lua  test2.lua
libs/lua/lib/: lua.lib
script-engine-test/: CMakeLists.txt  ecs.h  main.cpp  main_lua_luabridge.cpp  sol.cpp
